Removed icons from related menus to help reduce total page download sizes

--- a/site/pages/v4/accessibility/index-en.hbs
+++ b/site/pages/v4/accessibility/index-en.hbs
@@ -29,7 +29,12 @@
 		</div>
 	</div>
 	<div class="col-md-4">
-		<div class="list-group"><a href="../design/index-en.html" class="list-group-item"><span class="fa fa-picture-o text-muted"></span>Design guide </a><a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span>Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span>Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item active"><span class="fa fa-wheelchair fa-inverse"></span>Accessibility guide</a></div>
+		<div class="list-group">
+			<a href="../design/index-en.html" class="list-group-item">Design guide</a>
+			<a href="../writing/index-en.html" class="list-group-item">Writing guide</a>
+			<a href="../usability/index-en.html" class="list-group-item">Usability guide</a>
+			<a href="../accessibility/index-en.html" class="list-group-item active">Accessibility guide</a>
+		</div>
 		<blockquote>
 			<p>The most important blind visitor to your website is Google! In the same way that creating accessible web pages helps disabled person access your content, it also helps Google index your pages so that the right people can find your service or product.</p>
 			<p class="text-right">
