--- a/site/pages/v4/design/forms-en.hbs
+++ b/site/pages/v4/design/forms-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Forms",
 	"language": "en",
 	"altLangPrefix": "forms",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-07-03"
 }
 ---
@@ -38,7 +37,7 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="buttons-en.html">Buttons<span class="wb-inv"> - Design guide</span></a></li>
 					<li><a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html">Form validation<span class="wb-inv"> - Design guide</span></a></li>
@@ -47,7 +46,7 @@
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/forms-en.html">Forms<span class="wb-inv"> - Accessibility guide</span></a></li>
 					<li><a href="../accessibility/keyboard-en.html">Keyboard and user controls<span class="wb-inv"> - Accessibility guide</span></a></li>
