--- a/site/pages/v4/design/headings-en.hbs
+++ b/site/pages/v4/design/headings-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Headings",
 	"language": "en",
 	"altLangPrefix": "headings",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-07-03"
 }
 ---
@@ -31,14 +30,14 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related </h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/headings-en.html">Headings and page titles<span class="wb-inv"> - Accessibility guide </span></a></li>
 				</ul>
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span>Writing guide</h3>
+				<h3 class="h4">Writing guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../writing/principals-en.html#heading">Heading principles<span class="wb-inv"> - Writing guide</span></a></li>
 					<li><a href="../writing/formatting-en.html#headings">Heading and subheading formatting<span class="wb-inv"> - Writing guide</span></a></li>
