--- a/site/pages/v4/design/icons-en.hbs
+++ b/site/pages/v4/design/icons-en.hbs
@@ -55,15 +55,15 @@
   <div class="col-md-4 pull-right mrgn-bttm-lg">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <h3 class="h4">Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="images-en.html">Images<span class="wb-inv"> - Design guide</span></a></li>
     </ul>
-    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+    <h3 class="h4">Accessibility guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="../accessibility/images-en.html"> Images<span class="wb-inv"> - Accessibility guide</span></a></li>
     </ul>
-    <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+    <h3 class="h4">Writing guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="../writing/principals-en.html#image">Images<span class="wb-inv"> - Writing guide</span></a></li>
     </ul>
