--- a/site/pages/v4/design/keyboard-en.hbs
+++ b/site/pages/v4/design/keyboard-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Keyboard keys",
 	"language": "en",
 	"altLangPrefix": "keyboard",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-07-02"
 }
 ---
@@ -27,7 +26,7 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/keyboard-en.html">Keyboard and user controls<span class="wb-inv"> - Accessibility guide</span></a></li>
 				</ul>
