--- a/site/pages/v4/design/tables-en.hbs
+++ b/site/pages/v4/design/tables-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Tables",
 	"language": "en",
 	"altLangPrefix": "tables",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-07-24"
 }
 ---
@@ -35,21 +34,21 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html">Tables plug-in<span class="wb-inv"> - Design guide</span></a></li>
 				</ul>
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/tables-en.html">Tables<span class="wb-inv"> - Accessibility guide</span></a></li>
 				</ul>
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+				<h3 class="h4">Writing guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../writing/principals-en.html#tables">Tables<span class="wb-inv"> - Writing guide</span></a></li>
 				</ul>
