--- a/site/pages/v4/usability/index-en.hbs
+++ b/site/pages/v4/usability/index-en.hbs
@@ -18,7 +18,12 @@
 		</div>
 	</div>
 	<div class="col-md-4">
-		<div class="list-group"><a href="../design/index-en.html" class="list-group-item"><span class="fa fa-picture-o text-muted"></span>Design guide </a><a href="../writing/index-en.html" class="list-group-item"><span class="fa fa-font text-muted"></span>Writing guide</a> <a href="../usability/index-en.html" class="list-group-item active"><span class="fa fa-smile-o fa-inverse"></span>Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</a></div>
+		<div class="list-group">
+			<a href="../design/index-en.html" class="list-group-item">Design guide</a>
+			<a href="../writing/index-en.html" class="list-group-item">Writing guide</a>
+			<a href="../usability/index-en.html" class="list-group-item active">Usability guide</a>
+			<a href="../accessibility/index-en.html" class="list-group-item">Accessibility guide</a>
+		</div>
 		<blockquote>
 			<p>Quote here</p>
 			<p class="text-right">-Name</p>
