--- a/site/pages/v4/writing/formatting-en.hbs
+++ b/site/pages/v4/writing/formatting-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Content formatting",
 	"language": "en",
 	"altLangPrefix": "formatting",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-02-28"
 }
 ---
@@ -344,11 +343,11 @@
 		<div class="col-md-4">
 			<div class="well">
 				<h2 class="h3 mrgn-tp-0">Related </h2>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../design/blockquotes-en.html">Blockquotes<span class="wb-inv"><span class="wb-inv"> - Design guide</span></span></a></li>
 				</ul>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/quotations-en.html">Quotations and language<span class="wb-inv"> - Accessibility guide</span></a></li>
 				</ul>
@@ -897,15 +896,15 @@
 		<div class="col-md-4 pull-right">
 			<div class="well">
 				<h2 class="h3 mrgn-tp-0">Related </h2>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span>Writing guide</h3>
+				<h3 class="h4">Writing guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../writing/principals-en.html#heading">Heading principles- Writing guide</a></li>
 				</ul>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../design/headings-en.html">Headings<span class="wb-inv"> - Design guide</span></a></li>
 				</ul>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/headings-en.html">Headings<span class="wb-inv"> - Accessibility guide</span></a></li>
 				</ul>
@@ -1197,17 +1196,17 @@
 		<div class="pull-right col-md-4">
 			<div class="well">
 				<h2 class="h3 mrgn-tp-0">Related </h2>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span>Writing guide</h3>
+				<h3 class="h4">Writing guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../writing/principals-en.html#lists">List principles<span class="wb-inv"> - Writing guide</span></a></li>
 				</ul>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../design/lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></li>
 					<li><a href="../design/listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a></li>
 					<li><a href="../design/pills-en.html">Pills<span class="wb-inv"> - Design guide</span></a></li>
 				</ul>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/tables-en.html">Tables<span class="wb-inv"> - Accessibility guide</span></a></li>
 				</ul>
@@ -1265,15 +1264,15 @@
 		<div class="pull-right col-md-4">
 			<div class="well">
 				<h2 class="h3 mrgn-tp-0">Related </h2>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span>Writing guide</h3>
+				<h3 class="h4">Writing guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="principals-en.html#links">Link principles<span class="wb-inv"> - Writing guide</span></a></li>
 				</ul>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../design/links-en.html">Links<span class="wb-inv"> - Design guide</span></a></li>
 				</ul>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/links-en.html">Links<span class="wb-inv"> - Accessibility guide</span></a></li>
 				</ul>
