--- a/site/pages/v4/writing/index-en.hbs
+++ b/site/pages/v4/writing/index-en.hbs
@@ -91,7 +91,10 @@
 	</div>
 	<div class="col-md-4">
 		<div class="list-group">
-			<a href="../design/index-en.html" class="list-group-item"><span class="fa fa-picture-o text-muted"></span>Design guide </a><a href="../writing/index-en.html" class="list-group-item active"><span class="fa fa-font fa-inversed"></span>Writing guide</a> <a href="../usability/index-en.html" class="list-group-item"><span class="fa fa-smile-o text-muted"></span>Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</a>
+			<a href="../design/index-en.html" class="list-group-item">Design guide</a>
+			<a href="../writing/index-en.html" class="list-group-item active">Writing guide</a>
+			<a href="../usability/index-en.html" class="list-group-item">Usability guide</a>
+			<a href="../accessibility/index-en.html" class="list-group-item">Accessibility guide</a>
 		</div>
 		<blockquote>
 			<p>On the average Web page, users have time to read at most 28% of the words during an average visit; 20% is more likely.</p>
