--- a/site/pages/v4/writing/principals-en.hbs
+++ b/site/pages/v4/writing/principals-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Content creation principles",
 	"language": "en",
 	"altLangPrefix": "principals",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-02-28"
 }
 ---
@@ -569,11 +568,11 @@
 		</div>
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related </h2>
-			<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
+			<h3 class="h4">Design guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../design/headings-en.html">Headings<span class="wb-inv"> - Design guide</span></a></li>
 			</ul>
-			<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+			<h3 class="h4">Accessibility guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../accessibility/headings-en.html">Headings<span class="wb-inv"> - Accessibility guide</span></a></li>
 			</ul>
@@ -633,11 +632,11 @@
 		</div>
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related </h2>
-			<h3 class="h4"><span class="fa fa-font text-muted"></span>Writing guide</h3>
+			<h3 class="h4">Writing guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../writing/formatting-en.html#lists">List formatting<span class="wb-inv"> - Writing guide</span></a></li>
 			</ul>
-			<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
+			<h3 class="h4">Design guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../design/lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></li>
 				<li><a href="../design/listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a></li>
@@ -666,15 +665,15 @@
 		</div>
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related </h2>
-			<h3 class="h4"><span class="fa fa-font text-muted"></span>Writing guide</h3>
+			<h3 class="h4">Writing guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../writing/formatting-en.html#links">Link formatting<span class="wb-inv"> - Writing guide</span></a></li>
 			</ul>
-			<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
+			<h3 class="h4">Design guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../design/links-en.html">Links<span class="wb-inv"> - Design guide</span></a></li>
 			</ul>
-			<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+			<h3 class="h4">Accessibility guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../accessibility/links-en.html">Links<span class="wb-inv"> - Accessibility guide</span></a></li>
 			</ul>
@@ -699,13 +698,13 @@
 		</div>
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related </h2>
-			<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
+			<h3 class="h4">Design guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../design/images-en.html">Images<span class="wb-inv"> - Design guide</span></a></li>
 				<li><a href="../design/icons-en.html">Icons<span class="wb-inv"> - Design guide</span></a></li>
 				<li><a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html">Lightbox<span class="wb-inv"> - Design guide</span></a></li>
 			</ul>
-			<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+			<h3 class="h4">Accessibility guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../accessibility/images-en.html">Images<span class="wb-inv"> - Accessibility guide</span></a></li>
 			</ul>
@@ -746,12 +745,12 @@
 		</div>
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related </h2>
-			<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
+			<h3 class="h4">Design guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../design/tables-en.html">Tables<span class="wb-inv"> - Design guide</span></a></li>
 				<li><a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html">Tables plug-in<span class="wb-inv"> - Design guide</span></a></li>
 			</ul>
-			<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+			<h3 class="h4">Accessibility guide</h3>
 			<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 				<li><a href="../accessibility/tables-en.html">Tables<span class="wb-inv"> - Accessibility guide</span></a></li>
 			</ul>
