--- a/site/pages/v4/design/code-en.hbs
+++ b/site/pages/v4/design/code-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Code",
 	"language": "en",
 	"altLangPrefix": "code",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-07-03"
 }
 ---
@@ -30,7 +29,7 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="http://wet-boew.github.io/v4.0-ci/demos/prettify/prettify-en.html">Prettify code <span class="wb-inv">- Design guide </span></a></li>
 				</ul>
