--- a/site/pages/v4/design/labels-en.hbs
+++ b/site/pages/v4/design/labels-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Labels",
 	"language": "en",
 	"altLangPrefix": "labels",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-07-10"
 }
 ---
@@ -28,7 +27,7 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="badges-en.html">Badges<span class="wb-inv"> - Design guide</span></a></li>
 					<li><a href="colour-en.html">Colour<span class="wb-inv"> - Design guide</span></a></li>
@@ -36,7 +35,7 @@
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/colour-en.html">Colour<span class="wb-inv"> - Accessibility guide</span></a></li>
 				</ul>
