--- a/site/pages/v4/design/links-en.hbs
+++ b/site/pages/v4/design/links-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Links",
 	"language": "en",
 	"altLangPrefix": "links",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-07-10"
 }
 ---
@@ -28,7 +27,7 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="alerts-en.html#links">Alert links<span class="wb-inv"> - Design guide</span></a></li>
 					<li> <a href="buttons-en.html">Button links<span class="wb-inv"> - Design guide</span></a></li>
@@ -38,14 +37,14 @@
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<h3 class="h4">Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/links-en.html">Links <span class="wb-inv">- Accessibility guide</span></a></li>
 				</ul>
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+				<h3 class="h4">Writing guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../writing/principals-en.html#links">Link principles<span class="wb-inv"> - Writing guide</span></a></li>
 					<li><a href="../writing/formatting-en.html#links">Link formatting<span class="wb-inv"> - Writing guide</span></a></li>
