--- a/site/pages/v4/design/lists-en.hbs
+++ b/site/pages/v4/design/lists-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Lists",
 	"language": "en",
 	"altLangPrefix": "lists",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-07-02"
 }
 ---
@@ -34,14 +33,14 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="listgroup-en.html">List group <span class="wb-inv">- Design guide</span></a></li>
 				</ul>
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+				<h3 class="h4">Writing guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../writing/principals-en.html#lists">List principles<span class="wb-inv"> - Writing guide</span></a></li>
 					<li><a href="../writing/formatting-en.html#lists">List formatting<span class="wb-inv"> - Writing guide</span></a></li>
