--- a/site/pages/v4/design/progress-en.hbs
+++ b/site/pages/v4/design/progress-en.hbs
@@ -3,7 +3,6 @@
 	"title": "Progress bar",
 	"language": "en",
 	"altLangPrefix": "progress",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
 	"dateModified": "2014-02-28"
 }
 ---
@@ -34,7 +33,7 @@
   <div class="col-md-4">
    <div class="well">
     <h2 class="h3 mrgn-tp-0">Related </h2>
-    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+    <h3 class="h4">Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="http://wet-boew.github.io/v4.0-ci/demos/progress/progress-en.html">Progress polyfill<span class="wb-inv"> - Design guide</span></a></li>
     </ul>
