--- a/site/pages/v4/design/visible-en.hbs
+++ b/site/pages/v4/design/visible-en.hbs
@@ -3,7 +3,7 @@
 	"title": "Invisible and visible content",
 	"language": "en",
 	"altLangPrefix": "visible",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/visible-demo"],
+	"css": ["css/visible-demo"],
 	"dateModified": "2014-07-09"
 }
 ---
@@ -31,7 +31,7 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<h3 class="h4">Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="http://wet-boew.github.io/v4.0-ci/demos/data-ajax/data-ajax-en.html" >Data ajax<span class="wb-inv"> - Design guide</span></a></li>
 					<li><a href="http://wet-boew.github.io/v4.0-ci/demos/data-inview/data-inview-en.html" >Data inview<span class="wb-inv"> - Design guide</span></a></li>
