Cleaned up more markup

--- a/site/pages/v4/design/opacity-en.hbs
+++ b/site/pages/v4/design/opacity-en.hbs
@@ -3,29 +3,34 @@
 	"title": "Opacity",
 	"language": "en",
 	"altLangPrefix": "opacity",
-	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-08-06"
 }
 ---
-<div class="wb-prettify all-pre">
-	<div class="row">
-		<div class="col-md-8">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h2 class="panel-title">Table of contents</h2>
-				</div>
-				<div class="panel-body">
-					<ul>
-						<li><a href="#description">Description</a></li>
-						<li><a href="#options">Options</a></li>
-						<li><a href="#examples">Examples</a></li>
-					</ul>
-				</div>
+<span class="wb-prettify all-pre"></span>
+
+<div class="row">
+	<section class="col-md-8">
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h2 class="panel-title">Table of contents</h2>
+			</header>
+			<div class="panel-body">
+				<ul>
+					<li><a href="#description">Description</a></li>
+					<li><a href="#options">Options</a></li>
+					<li><a href="#examples">Examples</a></li>
+				</ul>
 			</div>
 		</div>
-	</div>
+	</section>
+</div>
+
+<section>
 	<h2 class="page-header" id="description">Description</h2>
 	<p>Adjust the opacity of any element.</p>
+</section>
+
+<section>
 	<h2 class="page-header" id="options">Opacity options</h2>
 	<table class="table">
 		<thead>
@@ -41,102 +46,114 @@
 				<td><code>opct-100</code></td>
 				<td>100% opacity</td>
 				<td>
-					<img class="opct-100" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-100" src="http://placehold.it/140x140" alt="Demo of opct-100" />
+				</td>
 				<td>
-					<p class="opct-100">Text</p>
+					<p class="opct-100">Demo of opct-100</p>
 				</td>
 			</tr>
 			<tr>
 				<td><code>opct-90</code></td>
 				<td>90% opacity</td>
 				<td>
-					<img class="opct-90" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-90" src="http://placehold.it/140x140" alt="Demo of opct-90" />
+				</td>
 				<td>
-					<p class="opct-90">Text</p>
+					<p class="opct-90">Demo of opct-90</p>
 				</td>
 			</tr>
 			<tr>
 				<td><code>opct-80</code></td>
 				<td>80% opacity</td>
 				<td>
-					<img class="opct-80" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-80" src="http://placehold.it/140x140" alt="Demo of opct-80" />
+				</td>
 				<td>
-					<p class="opct-80">Text</p>
+					<p class="opct-80">Demo of opct-80</p>
 				</td>
 			</tr>
 			<tr>
 				<td><code>opct-70</code></td>
 				<td>70% opacity</td>
 				<td>
-					<img class="opct-70" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-70" src="http://placehold.it/140x140" alt="Demo of opct-70" />
+				</td>
 				<td>
-					<p class="opct-70">Text</p>
+					<p class="opct-70">Demo of opct-70</p>
 				</td>
 			</tr>
 			<tr>
 				<td><code>opct-60</code></td>
 				<td>60% opacity</td>
 				<td>
-					<img class="opct-60" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-60" src="http://placehold.it/140x140" alt="Demo of opct-60" />
+				</td>
 				<td>
-					<p class="opct-60">Text</p>
+					<p class="opct-60">Demo of opct-60</p>
 				</td>
 			</tr>
 			<tr>
 				<td><code>opct-50</code></td>
 				<td>50% opacity</td>
 				<td>
-					<img class="opct-50" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-50" src="http://placehold.it/140x140" alt="Demo of opct-50" />
+				</td>
 				<td>
-					<p class="opct-50">Text</p>
+					<p class="opct-50">Demo of opct-50</p>
 				</td>
 			</tr>
 			<tr>
 				<td><code>opct-40</code></td>
 				<td>40% opacity</td>
 				<td>
-					<img class="opct-40" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-40" src="http://placehold.it/140x140" alt="Demo of opct-40" />
+				</td>
 				<td>
-					<p class="opct-40">Text</p>
+					<p class="opct-40">Demo of opct-40</p>
 				</td>
 			</tr>
 			<tr>
 				<td><code>opct-30</code></td>
 				<td>30% opacity</td>
 				<td>
-					<img class="opct-30" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-30" src="http://placehold.it/140x140" alt="Demo of opct-30" />
+				</td>
 				<td>
-					<p class="opct-30">Text</p>
+					<p class="opct-30">Demo of opct-30</p>
 				</td>
 			</tr>
 			<tr>
 				<td><code>opct-20</code></td>
 				<td>20% opacity</td>
 				<td>
-					<img class="opct-20" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-20" src="http://placehold.it/140x140" alt="Demo of opct-20" />
+				</td>
 				<td>
-					<p class="opct-20">Text</p>
+					<p class="opct-20">Demo of opct-20</p>
 				</td>
 			</tr>
 			<tr>
 				<td><code>opct-10</code></td>
 				<td>10% opacity</td>
 				<td>
-					<img class="opct-10" alt="demo image" src="http://placehold.it/140x140"></td>
+					<img class="opct-10" src="http://placehold.it/140x140" alt="Demo of opct-10" />
+				</td>
 				<td>
-					<p class="opct-10">Text</p>
+					<p class="opct-10">Demo of opct-10</p>
 				</td>
 			</tr>
 		</tbody>
 	</table>
+
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-		<div class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
-		</div>
-		<div class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
-		</div>
+		</section>
 	</div>
-</div>
+</section>
