--- a/site/pages/v4/index-en.hbs
+++ b/site/pages/v4/index-en.hbs
@@ -4,7 +4,7 @@
 	"language": "en",
 	"altLangPrefix": "index",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-06-16"
+	"dateModified": "2014-08-06"
 }
 ---
 <div class="row">
@@ -17,41 +17,75 @@
 					<div class="panel-body">
 						<h2 class="mrgn-tp-0 h3">Design guide</h2>
 						<p>Offers a large selection of design and layout features for both basic and complex designs.</p>
-						<p class="text-center"><a href="design/index-en.html" style="text-decoration: none;"><span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-picture-o fa-stack-1x fa-inverse"></span></span><span class="btn btn-primary btn-block">Design guide</span></a></p>
+						<p class="text-center">
+							<a href="design/index-en.html" style="text-decoration: none;">
+								<span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block">
+									<span class="fa fa-circle fa-stack-2x"></span>
+									<span class="fa fa-picture-o fa-stack-1x fa-inverse"></span>
+								</span>
+								<span class="btn btn-primary btn-block">Design guide</span>
+							</a>
+						</p>
 					</div>
 				</div>
 			</section>
+
 			<section class="col-md-6">
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<h2 class="mrgn-tp-0 h3">Writing guide</h2>
 						<p>Create content that is written for the web and follows specific technical writing requirements.</p>
-						<p class="text-center"><a href="writing/index-en.html" style="text-decoration: none;"><span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-font fa-stack-1x fa-inverse"></span></span><span class="btn btn-primary btn-block">Writing guide</span></a></p>
+						<p class="text-center">
+							<a href="writing/index-en.html" style="text-decoration: none;">
+								<span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block">
+									<span class="fa fa-circle fa-stack-2x"></span>
+									<span class="fa fa-font fa-stack-1x fa-inverse"></span>
+								</span>
+								<span class="btn btn-primary btn-block">Writing guide</span>
+							</a>
+						</p>
 					</div>
 				</div>
 			</section>
 		</div>
+
 		<div class="row">
 			<section class="col-md-6">
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<h2 class="mrgn-tp-0 h3">Usability guide</h2>
 						<p>User behaviour needs to be understood in order to create content that is usable.</p>
-						<p class="text-center"><a href="usability/index-en.html" style="text-decoration: none;"><span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-smile-o fa-stack-1x fa-inverse"></span></span><span class="btn btn-primary btn-block">Usability guide</span></a></p>
+						<p class="text-center">
+							<a href="usability/index-en.html" style="text-decoration: none;">
+								<span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block">
+									<span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-smile-o fa-stack-1x fa-inverse"></span>
+								</span>
+								<span class="btn btn-primary btn-block">Usability guide</span>
+							</a>
+						</p>
 					</div>
 				</div>
 			</section>
+
 			<section class="col-md-6">
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<h2 class="mrgn-tp-0 h3">Accessibility guide</h2>
 						<p>Create and code content so that is accessible to all users, regardless of ability or disability.</p>
-						<p class="text-center"><a href="accessibility/index-en.html" style="text-decoration: none;"><span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-wheelchair fa-stack-1x fa-inverse"></span></span><span class="btn btn-primary btn-block">Accessibility guide</span></a></p>
+						<p class="text-center">
+							<a href="accessibility/index-en.html" style="text-decoration: none;">
+								<span class="fa-stack text-muted fa-3x hidden-xs hidden-sm center-block">
+									<span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-wheelchair fa-stack-1x fa-inverse"></span>
+								</span>
+								<span class="btn btn-primary btn-block">Accessibility guide</span>
+							</a>
+						</p>
 					</div>
 				</div>
 			</section>
 		</div>
 	</div>
+
 	<div class="col-md-4">
 		<div class="well">
 			<section class="panel panel-default">
@@ -61,6 +95,7 @@
 					<p><a href="role/author-en.html" class="btn btn-info btn-block">Author role</a></p>
 				</div>
 			</section>
+
 			<section class="panel panel-default">
 				<div class="panel-body">
 					<h2 class="mrgn-tp-0 h3">Webmaster / Developer role</h2>
@@ -68,6 +103,7 @@
 					<p><a href="role/webmaster-en.html" class="btn btn-info btn-block">Webmaster / Developer role</a></p>
 				</div>
 			</section>
+
 			<section class="panel panel-default">
 				<div class="panel-body">
 					<h2 class="mrgn-tp-0 h3">Designer role</h2>
@@ -75,6 +111,7 @@
 					<p><a href="role/designer-en.html" class="btn btn-info btn-block">Designer role</a></p>
 				</div>
 			</section>
+
 			<section class="panel panel-default">
 				<div class="panel-body">
 					<h2 class="mrgn-tp-0 h3">IM / IA role</h2>
@@ -82,6 +119,7 @@
 					<p><a href="role/ia-en.html" class="btn btn-info btn-block">IM / IA role</a></p>
 				</div>
 			</section>
+
 			<section class="panel panel-default mrgn-bttm-0">
 				<div class="panel-body">
 					<h2 class="mrgn-tp-0 h3">Manager role</h2>
