--- a/site/pages/v4/usability/index-en.hbs
+++ b/site/pages/v4/usability/index-en.hbs
@@ -4,33 +4,42 @@
 	"language": "en",
 	"altLangPrefix": "index",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-08-07"
 }
 ---
 <div class="row">
 	<div class="col-md-8">
 		<div class="row">
-			<div class="col-md-4 col-lg-3 visible-md visible-lg "><span class="fa-stack fa-5x"><span class="fa fa-circle fa-stack-2x"></span><span class="fa fa-smile-o fa-stack-1x fa-inverse"></span></span></div>
+			<div class="col-md-4 col-lg-3 visible-md visible-lg">
+				<span class="fa-stack fa-5x">
+					<span class="fa fa-circle fa-stack-2x"></span>
+					<span class="fa fa-smile-o fa-stack-1x fa-inverse"></span>
+				</span>
+			</div>
 			<div class="col-md-8 col-lg-9">
 				<p>The usability guide provides content authors and webmasters with an understanding of how user behaviour impacts whether content is usable or not.</p>
 				<p>(info goes here)</p>
 			</div>
 		</div>
 	</div>
-	<div class="col-md-4">
-		<div class="list-group">
+
+	<section class="col-md-4">
+		<h2 class="wb-inv">Related</h2>
+		<div class="list-group hidden-xs hidden-sm">
 			<a href="../design/index-en.html" class="list-group-item">Design guide</a>
 			<a href="../writing/index-en.html" class="list-group-item">Writing guide</a>
 			<a href="../usability/index-en.html" class="list-group-item active">Usability guide</a>
 			<a href="../accessibility/index-en.html" class="list-group-item">Accessibility guide</a>
 		</div>
+
 		<blockquote>
 			<p>Quote here</p>
 			<p class="text-right">-Name</p>
 		</blockquote>
+
 		<blockquote>
 			<p>Quote here</p>
 			<p class="text-right">-Name</p>
 		</blockquote>
-	</div>
+	</section>
 </div>
