--- a/site/pages/v4/writing/index-en.hbs
+++ b/site/pages/v4/writing/index-en.hbs
@@ -4,14 +4,14 @@
 	"language": "en",
 	"altLangPrefix": "index",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-06-16"
+	"dateModified": "2014-08-06"
 }
 ---
 <section class="alert alert-info">
-	<h2 class="h3">
-	Community-developed product</h2>
+	<h2 class="h3">Community-developed product</h2>
 	<p>This is a community-developed product and not intended to replace the Canada.ca site guidelines.</p>
 </section>
+
 <div class="row">
 	<div class="col-md-8">
 		<div class="row">
@@ -29,6 +29,7 @@
 				</ul>
 			</div>
 		</div>
+
 		<div class="row">
 			<section class="col-sm-4">
 				<h2>Create content</h2>
@@ -37,14 +38,15 @@
 						<a href="principals-en.html">Content creation principles</a>
 						<ul>
 							<li><a href="principals-en.html#print">Print versus Web</a></li>
-							<li><a href="principals-en.html#development">Content development </a></li>
-							<li><a href="principals-en.html#architecture">Content architecture </a></li>
-							<li><a href="principals-en.html#style">Content style and flow </a></li>
-							<li><a href="principals-en.html#content">Content structure</a> </li>
+							<li><a href="principals-en.html#development">Content development</a></li>
+							<li><a href="principals-en.html#architecture">Content architecture</a></li>
+							<li><a href="principals-en.html#style">Content style and flow</a></li>
+							<li><a href="principals-en.html#content">Content structure</a></li>
 						</ul>
 					</li>
 				</ul>
 			</section>
+
 			<section class="col-sm-8">
 				<h2>Format content</h2>
 				<ul class="colcount-sm-2 list-unstyled">
@@ -60,8 +62,7 @@
 					<li><a href="formatting-en.html#dash">Dashes and hyphens</a></li>
 					<li><a href="formatting-en.html#date">Date and time</a></li>
 					<li><a href="formatting-en.html#examples">Examples</a></li>
-					<li><a href="formatting-en.html#faqs">
-						<abbr title="Frequently asked questions">FAQ</abbr>s </a></li>
+					<li><a href="formatting-en.html#faqs"><abbr title="Frequently asked questions">FAQ</abbr>s</a></li>
 					<li><a href="formatting-en.html#form">Forms and publications</a></li>
 					<li><a href="formatting-en.html#geographic">Geographic names</a></li>
 					<li><a href="formatting-en.html#headings">Headings and subheadings</a></li>
@@ -89,21 +90,25 @@
 			</section>
 		</div>
 	</div>
-	<div class="col-md-4">
+
+	<section class="col-md-4">
+		<h2 class="wb-inv">Related</h2>
 		<div class="list-group">
 			<a href="../design/index-en.html" class="list-group-item">Design guide</a>
 			<a href="../writing/index-en.html" class="list-group-item active">Writing guide</a>
 			<a href="../usability/index-en.html" class="list-group-item">Usability guide</a>
 			<a href="../accessibility/index-en.html" class="list-group-item">Accessibility guide</a>
 		</div>
+
 		<blockquote>
 			<p>On the average Web page, users have time to read at most 28% of the words during an average visit; 20% is more likely.</p>
 			<p class="text-right">-Nielsen Norman Group<br />
 				<a href="http://www.nngroup.com/articles/how-users-read-on-the-web/">How Users Read on the Web</a></p>
 		</blockquote>
+
 		<blockquote>
 			<p>I try to leave out the parts that people skip.</p>
 			<p class="text-right">-Elmore Leonard, author</p>
 		</blockquote>
-	</div>
+	</section>
 </div>
